# windows_fileserver_heatmap

./: .gitignore  Cargo.toml  DEPLOYMENT.md  FUTURE-FEATURES.md  README.md
.claude/: settings.json
agent/src/: emit.rs  etw.rs
collector/: Cargo.toml
collector/src/: archive.rs  db.rs  ingest.rs  main.rs  query.rs
collector/src/ui/: app.js  index.html  style.css
src/: correlation.rs  etw.rs  events.rs  identity.rs  inventory.rs  main.rs
troubleshooting/: ingest-truncation-analysis-extended.md  ingest-truncation-analysis.md
